--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,10 @@
         "php": "^7.2",
         "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "^6.0",
+        "laravel/framework": "6.0",
         "laravel/tinker": "^1.0",
-        "laravel/ui": "^1.0"
+        "laravel/ui": "^1.0",
+        "laravellegends/pt-br-validator": "6.*"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
